final version of jupyter notebook

--- a/REINFORCE_DQN_PPO_LUNAR_LANDER.ipynb
+++ b/REINFORCE_DQN_PPO_LUNAR_LANDER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 257.0853726249188\n"
+      "Execution time: 599.5786481248215\n"
      ]
     },
     {
@@ -96,7 +96,7 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,9 +222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          |    0/1500 [  00:00<      ?, ?ep/s]/Users/luisweekes/anaconda3/envs/myenv/lib/python3.11/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n",
+      "100%|##########| 1500/1500 [  06:39<  00:00,  3.75ep/s, Score: -174.00, 100 score avg:  143.17]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Done!\n",
+      "Execution time: 400.1276285420172\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#DQN\n",
     "\n",
@@ -356,7 +382,7 @@
     "\n",
     "        return (states, actions, rewards, next_states, dones)\n",
     "\n",
-    "def running_mean(iterations, score_hist):\n",
+    "def running_mean2(iterations, score_hist):\n",
     "    window_size = 100 #for the running mean\n",
     "\n",
     "    if iterations == 0:\n",
@@ -395,7 +421,7 @@
     "        score_hist.append(score)\n",
     "        epsilon = max(eps_end, epsilon*eps_decay)\n",
     "\n",
-    "        score_avg = running_mean(idx_epi, score_hist)\n",
+    "        score_avg = running_mean2(idx_epi, score_hist)\n",
     "        mean_rewards.append(score_avg)\n",
     "\n",
     "        pbar.set_postfix_str(f\"Score: {score: 7.2f}, 100 score avg: {score_avg: 7.2f}\")\n",
@@ -495,14 +521,34 @@
     "DQN_mean_rewards = np.array(DQN_mean_rewards)\n",
     "\n",
     "if str(device) == \"cuda\":\n",
-    "    torch.cuda.empty_cache()\n"
+    "    torch.cuda.empty_cache()\n",
+    "\n",
+    "os.system('say \"Finished\"')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 669.9616207913496\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#DDQN\n",
     "\n",
@@ -517,7 +563,10 @@
     "import matplotlib.pyplot as plt\n",
     "from itertools import count\n",
     "from collections import deque, namedtuple\n",
+    "import timeit\n",
     "\n",
+    "\n",
+    "start_time = timeit.default_timer()\n",
     "SEED = 42\n",
     "is_ipython = 'inline' in matplotlib.get_backend()\n",
     "if is_ipython:\n",
@@ -853,18 +902,132 @@
     "    convergence_threshold=300\n",
     ")\n",
     "\n",
+    "end_time = timeit.default_timer()\n",
+    "execution_time_DDQN = end_time - start_time\n",
+    "print(\"Execution time:\", execution_time_DDQN)\n",
+    "\n",
     "#plot_rewards(run_rewards)\n",
     "#plt.savefig('out\\\\learning_curve.png')\n",
     "\n",
-    "rewards_history_DDQN = np.array(rewards_hist_DQN)\n",
-    "DDQN_mean_rewards = running_mean(rewards_hist_DDQN)\n"
+    "rewards_history_DDQN = np.array(rewards_hist_DDQN)\n",
+    "DDQN_mean_rewards = running_mean(rewards_history_DDQN)\n",
+    "\n",
+    "os.system('say \"Finished\"')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learning rate: 0.003 Adam betas: (0.9, 0.999)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisweekes/anaconda3/envs/myenv/lib/python3.11/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 20 \t avg length: 104 \t reward: -160\n",
+      "Episode 40 \t avg length: 98 \t reward: -259\n",
+      "Episode 60 \t avg length: 99 \t reward: -209\n",
+      "Episode 80 \t avg length: 103 \t reward: -205\n",
+      "Episode 100 \t avg length: 103 \t reward: -212\n",
+      "Episode 120 \t avg length: 106 \t reward: -194\n",
+      "Episode 140 \t avg length: 103 \t reward: -242\n",
+      "Episode 160 \t avg length: 117 \t reward: -159\n",
+      "Episode 180 \t avg length: 114 \t reward: -180\n",
+      "Episode 200 \t avg length: 113 \t reward: -129\n",
+      "Episode 220 \t avg length: 119 \t reward: -71\n",
+      "Episode 240 \t avg length: 130 \t reward: -144\n",
+      "Episode 260 \t avg length: 128 \t reward: -159\n",
+      "Episode 280 \t avg length: 141 \t reward: -168\n",
+      "Episode 300 \t avg length: 145 \t reward: -130\n",
+      "Episode 320 \t avg length: 203 \t reward: -62\n",
+      "Episode 340 \t avg length: 470 \t reward: -56\n",
+      "Episode 360 \t avg length: 379 \t reward: -31\n",
+      "Episode 380 \t avg length: 767 \t reward: -7\n",
+      "Episode 400 \t avg length: 730 \t reward: 21\n",
+      "Episode 420 \t avg length: 999 \t reward: 22\n",
+      "Episode 440 \t avg length: 999 \t reward: 17\n",
+      "Episode 460 \t avg length: 949 \t reward: 19\n",
+      "Episode 480 \t avg length: 911 \t reward: 39\n",
+      "Episode 500 \t avg length: 736 \t reward: 71\n",
+      "Episode 520 \t avg length: 759 \t reward: 71\n",
+      "Episode 540 \t avg length: 800 \t reward: 113\n",
+      "Episode 560 \t avg length: 806 \t reward: 109\n",
+      "Episode 580 \t avg length: 630 \t reward: 137\n",
+      "Episode 600 \t avg length: 399 \t reward: 115\n",
+      "Episode 620 \t avg length: 620 \t reward: 139\n",
+      "Episode 640 \t avg length: 535 \t reward: 132\n",
+      "Episode 660 \t avg length: 575 \t reward: 109\n",
+      "Episode 680 \t avg length: 636 \t reward: 111\n",
+      "Episode 700 \t avg length: 526 \t reward: 108\n",
+      "Episode 720 \t avg length: 499 \t reward: 144\n",
+      "Episode 740 \t avg length: 490 \t reward: 146\n",
+      "Episode 760 \t avg length: 448 \t reward: 123\n",
+      "Episode 780 \t avg length: 427 \t reward: 140\n",
+      "Episode 800 \t avg length: 529 \t reward: 144\n",
+      "Episode 820 \t avg length: 491 \t reward: 136\n",
+      "Episode 840 \t avg length: 485 \t reward: 143\n",
+      "Episode 860 \t avg length: 491 \t reward: 138\n",
+      "Episode 880 \t avg length: 420 \t reward: 137\n",
+      "Episode 900 \t avg length: 532 \t reward: 108\n",
+      "Episode 920 \t avg length: 622 \t reward: 83\n",
+      "Episode 940 \t avg length: 676 \t reward: 71\n",
+      "Episode 960 \t avg length: 532 \t reward: 131\n",
+      "Episode 980 \t avg length: 737 \t reward: -6\n",
+      "Episode 1000 \t avg length: 669 \t reward: 65\n",
+      "Episode 1020 \t avg length: 678 \t reward: 101\n",
+      "Episode 1040 \t avg length: 590 \t reward: 93\n",
+      "Episode 1060 \t avg length: 616 \t reward: 109\n",
+      "Episode 1080 \t avg length: 496 \t reward: 81\n",
+      "Episode 1100 \t avg length: 513 \t reward: 53\n",
+      "Episode 1120 \t avg length: 513 \t reward: 129\n",
+      "Episode 1140 \t avg length: 513 \t reward: 110\n",
+      "Episode 1160 \t avg length: 595 \t reward: -41\n",
+      "Episode 1180 \t avg length: 602 \t reward: -63\n",
+      "Episode 1200 \t avg length: 644 \t reward: -27\n",
+      "Episode 1220 \t avg length: 654 \t reward: -32\n",
+      "Episode 1240 \t avg length: 641 \t reward: 21\n",
+      "Episode 1260 \t avg length: 740 \t reward: 22\n",
+      "Episode 1280 \t avg length: 714 \t reward: 0\n",
+      "Episode 1300 \t avg length: 699 \t reward: -54\n",
+      "Episode 1320 \t avg length: 691 \t reward: 48\n",
+      "Episode 1340 \t avg length: 706 \t reward: 21\n",
+      "Episode 1360 \t avg length: 699 \t reward: 25\n",
+      "Episode 1380 \t avg length: 681 \t reward: 72\n",
+      "Episode 1400 \t avg length: 652 \t reward: 94\n",
+      "Episode 1420 \t avg length: 663 \t reward: 70\n",
+      "Episode 1440 \t avg length: 672 \t reward: 36\n",
+      "Episode 1460 \t avg length: 675 \t reward: 20\n",
+      "Episode 1480 \t avg length: 743 \t reward: 40\n",
+      "Episode 1500 \t avg length: 646 \t reward: 50\n",
+      "Execution time: 636.8579610413872\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#PPO \n",
     "\n",
@@ -875,6 +1038,11 @@
     "import numpy as np\n",
     "#from gym.wrappers.record_video import RecordVideo\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
+    "import timeit\n",
+    "\n",
+    "\n",
+    "start_time = timeit.default_timer()\n",
     "\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -1101,16 +1269,21 @@
     "        print('Episode {} \\t avg length: {} \\t reward: {}'.format(i_episode, avg_length, running_reward))\n",
     "        running_reward = 0\n",
     "        avg_length = 0\n",
-    "\n",
+    "        \n",
+    "end_time = timeit.default_timer()\n",
+    "execution_time_PPO = end_time - start_time\n",
+    "print(\"Execution time:\", execution_time_PPO)\n",
     "\n",
     "rewards_history_PPO = rew_for_plots_list\n",
     "rewards_history_PPO = np.array(rewards_history_PPO)\n",
-    "PPO_mean_rewards = running_mean(rewards_history_PPO)\n"
+    "PPO_mean_rewards = running_mean(rewards_history_PPO)\n",
+    "\n",
+    "os.system('say \"Finished\"')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,6 +1353,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max re 249.96974852123145\n",
+      "max dqn 308.4555704955338\n",
+      "max ddqn 278.3491662440797\n",
+      "max PPO 271.10909991301594\n",
+      "max rand 59.68827169511762\n",
+      "mean last 100 re 103.00586487958697\n",
+      "mean last 100 DQN 105.3829612150339\n",
+      "mean last 100 ddqn 261.2210411285216\n",
+      "mean last 100 ppo 231.0660395760553\n",
+      "mean last 100 rand -186.6386485735433\n"
+     ]
+    }
+   ],
+   "source": [
+    "#results analysis\n",
+    "\n",
+    "######### max rewards\n",
+    "\n",
+    "maximum_score_reinforce = np.max(rewards_history_reinforce)\n",
+    "maximum_score_DQN = np.max(rewards_history_DQN)\n",
+    "maximum_score_DDQN = np.max(rewards_history_DDQN)\n",
+    "maximum_score_PPO = np.max(rewards_history_PPO)\n",
+    "maximum_score_rand = np.max(rewards_history_rand)\n",
+    "\n",
+    "print(\"max re\",maximum_score_reinforce)\n",
+    "print(\"max dqn\",maximum_score_DQN)\n",
+    "print(\"max ddqn\",maximum_score_DDQN)\n",
+    "print(\"max PPO\",maximum_score_PPO)\n",
+    "print(\"max rand\",maximum_score_rand)\n",
+    "\n",
+    "\n",
+    "######### mean of last 100\n",
+    "\n",
+    "mean_100_reinforce = np.mean(rewards_history_reinforce[-100:])\n",
+    "mean_100_DQN = np.mean(rewards_history_DQN[-100:])\n",
+    "mean_100_DDQN = np.mean(rewards_history_DDQN[-100:])\n",
+    "mean_100_PPO = np.mean(rewards_history_PPO[-100:])\n",
+    "mean_100_rand = np.mean(rewards_history_rand[-100:])\n",
+    "\n",
+    "print('mean last 100 re', mean_100_reinforce)\n",
+    "print('mean last 100 DQN', mean_100_DQN)\n",
+    "print('mean last 100 ddqn', mean_100_DDQN)\n",
+    "print('mean last 100 ppo', mean_100_PPO)\n",
+    "print('mean last 100 rand', mean_100_rand)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -1242,6 +1472,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
